--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="desc_user_pic">Display picture of user</string>
     <string name="title_activity_home">Feeds</string>
 
-<!--Drawer-->
+    <!--Drawer-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_profile">Profile</string>
@@ -17,13 +17,14 @@
     <string name="nav_settings">Settings</string>
     <string name="nav_help">Help</string>
 
-<!--Menu-->
+    <!--Menu-->
     <string name="menu_report">Report error</string>
     <string name="menu_logout">Log out</string>
     <string name="menu_refresh">Refresh</string>
 
     <!--Search activity-->
     <string name="title_activity_search">Search</string>
+    <string name="no_results">No results found</string>
 
     <!--Timeline activity-->
     <string name="title_activity_timeline">Timeline</string>
