--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_logout">Log out</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_search">Search</string>
+    <string name="menu_search_hint">Search Twitter</string>
 
     <!--Search activity-->
     <string name="title_activity_search">Search</string>
