--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,9 +26,9 @@
 
     <!--Search activity-->
     <string name="title_activity_search">Search</string>
-    <string name="no_results">No results found</string>
+    <string name="no_results">Search tweets, people and more</string>
 
     <!--Timeline activity-->
     <string name="title_activity_timeline">Timeline</string>
-    <string name="no_tweet">No tweets</string>
+    <string name="no_tweet">Your tweets!</string>
 </resources>
