added tweet view components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <!--Timeline activity-->
     <string name="title_activity_timeline">Timeline</string>
     <string name="no_tweet">Your tweets!</string>
+    <string name="title_activity_tweet">TweetActivity</string>
 </resources>
